--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                               </div>
                         </div>
                         <div class="w3-container w3-card w3-white w3-margin-bottom">
-                              <form action="action_page.php">
+                              <form action="https://formsubmit.co/el/sayici">
                                 <label for="fname">First Name</label>
                                 <input type="text" id="fname" name="firstname" autofocus placeholder="Your name..">
                             
