--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                                     </p>
                                     <p><a href="https://api.whatsapp.com/send?phone=1224435535&text=Hola"><i
                                                       class="fa fa-whatsapp  w3-margin-right w3-large w3-text-teal"></i>
-                                                whatsapp</a>
+                                                whatsapp</a><br>
+                                          <img src="../../Downloads/frame.png" alt="">
                                     </p>
+
 
 
                                     <hr>
@@ -158,7 +160,8 @@
 
                         <div class="w3-container w3-row w3-card w3-white w3-margin-bottom">
                               <h2 class="w3-text-grey w3-padding-16"><i
-                                    class="fa fa-book fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Muestra Proyectos
+                                          class="fa fa-book fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Muestra
+                                    Proyectos
                               </h2>
                               <div class="w3-panel w3-card w3-third">
                                     <p>w3-card</p>
@@ -208,19 +211,20 @@
                         </div>
                         <div class="w3-container w3-card w3-white w3-margin-bottom">
                               <form action="https://formsubmit.co/el/sayici">
-                                <label for="fname">First Name</label>
-                                <input type="text" id="fname" name="firstname" autofocus placeholder="Your name..">
-                            
-                                <label for="lname">correo electrónico</label>
-                                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                                    <label for="fname">First Name</label>
+                                    <input type="text" id="fname" name="firstname" autofocus placeholder="Your name..">
 
-                            
-                                <label for="subject">Subject</label>
-                                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-                                <input type="reset" value="Borrar">
-                                <input type="submit" value="Solicitar información">
+                                    <label for="lname">correo electrónico</label>
+                                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+
+                                    <label for="subject">Subject</label>
+                                    <textarea id="subject" name="subject" placeholder="Write something.."
+                                          style="height:200px"></textarea>
+                                    <input type="reset" value="Borrar">
+                                    <input type="submit" value="Solicitar información">
                               </form>
-                            </div>
+                        </div>
 
                         <!-- End Right Column -->
                   </div>
