--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     <p><a href="https://api.whatsapp.com/send?phone=1224435535&text=Hola"><i
                                                       class="fa fa-whatsapp  w3-margin-right w3-large w3-text-teal"></i>
                                                 whatsapp</a><br>
-                                          <img src="../../Downloads/frame.png" alt="">
+                                          <img src="img/frame.png" alt="">
                                     </p>
 
 
