--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                           class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work
                                     Experience</h2>
                               <div class="w3-container">
-                                    <h5 class="w3-opacity"><b>Front End Developer / w3schools.com</b></h5>
+                                    <h5 class="w3-opacity"><b>Front End Developer </b></h5>
                                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan
                                           2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
                                     <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
@@ -210,7 +210,8 @@
                               </div>
                         </div>
                         <div class="w3-container w3-card w3-white w3-margin-bottom">
-                              <form action="https://formsubmit.co/el/sayici">
+                              <form action="https://formsubmit.co/el/confirm/7d3f1eb3894ac024f6afb514b2828625
+">
                                     <label for="fname">First Name</label>
                                     <input type="text" id="fname" name="firstname" autofocus placeholder="Your name..">
 
